--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,36 @@ body{
     
 }
 div{
-    width: 35%;
+    width: 200px;
     height: 200px;
     margin:auto;
     text-align: center;
     background-color: #fff;
+    padding:10px;
 }
  
 form{
     background-color: beige;
     width: 100%;
-    height: 100%;
+    height: 95%;
     text-align: center;
+    border:solid 1px black;
+    padding-top: 10px;
+   
 }
 .answer-bar{
     width: 80%;
+    text-align: right;
+    margin:auto;
+    padding-bottom: 10px;
+    
 }
 input{
-    width: 60px;
+    width: 30%;
     padding:10px;
+    margin-top: 5px;
     
+}
+.equal{
+    width: 80%;
 }
